# nostr-desktop

./: .gitignore  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yml
src/: context.rs  main.rs  message.rs  sync.rs
src/component/: circle.rs  dashboard.rs  icon.rs  mod.rs  sidebar.rs  version.rs
src/component/dashboard/: mod.rs  navbar.rs
src/component/dashboard/sidebar/: button.rs  mod.rs
src/component/sidebar/: button.rs  mod.rs
src/layout/: login.rs  mod.rs
src/layout/menu/: chat.rs  contacts.rs  explore.rs  home.rs  mod.rs  notifications.rs  profile.rs
src/layout/menu/setting/: mod.rs  relays.rs
src/nostr/: filters.rs  mod.rs  sync.rs  thread.rs
src/nostr/db/: mod.rs  model.rs  rocksdb.rs  schema.rs  util.rs
src/stage/: mod.rs
src/stage/auth/: context.rs  mod.rs
src/stage/auth/screen/: login.rs  mod.rs
src/stage/dashboard/: context.rs  mod.rs
src/stage/dashboard/component/: contact.rs  mod.rs
src/stage/dashboard/component/dashboard/: mod.rs  navbar.rs
src/stage/dashboard/component/dashboard/sidebar/: button.rs  mod.rs
src/stage/dashboard/component/post/: mod.rs
src/stage/dashboard/screen/: chat.rs  contacts.rs  explore.rs  home.rs  mod.rs  notifications.rs  profile.rs
src/stage/dashboard/screen/setting/: mod.rs  relays.rs
src/theme/: color.rs  font.rs  icon.rs  mod.rs
src/util/: dir.rs  mod.rs
