[package]
name = "nostr-desktop"
version = "0.1.0"
edition = "2021"
description = "Nostr Desktop"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/nostr-desktop"
repository = "https://github.com/yukibtc/nostr-desktop.git"
license = "MIT"
keywords = ["nostr", "nostr-sdk", "client", "gui"]
categories = ["GUI"]

[dependencies]
async-stream = "0.3.3"
const_format = "0.2.30"
dirs = "4.0.0"
env_logger = "0.8.2"
iced = { version = "0.6", default-features = false, features = ["image", "tokio", "wgpu"] }
iced_futures = "0.5.1"
iced_native = "0.7.0"
log = "0.4.17"
nostr-sdk = "0.11"
# nostr-sdk = { git = "https://github.com/yukibtc/nostr-rs-sdk.git", rev = "2f6fa1c238db4a7deba4646e5cd523ad1107e25a" }
# notify-rust = "4.6.0"
once_cell = "1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rusqlite = "0.28.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
