[package]
name = "nostr-desktop"
version = "0.1.0"
edition = "2021"
description = "Nostr Desktop"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/nostr-desktop"
repository = "https://github.com/yukibtc/nostr-desktop.git"
license = "MIT"
keywords = ["nostr", "nostr-sdk", "client", "gui"]
categories = ["GUI"]

[dependencies]
async-stream = "0.3.3"
chrono = "0.4.23"
dirs = "4.0.0"
env_logger = "0.8.2"
iced = { version = "0.6", default-features = false, features = ["image", "tokio", "glow"] }
iced_futures = "0.5.1"
iced_native = "0.7.0"
log = "0.4.17"
# nostr-sdk = "0.12"
nostr-sdk = { git = "https://github.com/yukibtc/nostr-rs-sdk.git", rev = "61b9a4d470f626e8891497778261d5e7d2672358", features = ["sqlite"] }
# nostr-sdk = { path = "../nostr-rs-sdk/crates/nostr-sdk", features = ["sqlite"] }
# notify-rust = "4.6.0"
once_cell = "1"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
